[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.coverage.run]
omit = []

[project]
authors = [{ name = "Fausto Morales", email = "fausto@robinbay.com" }]
requires-python = ">=3.10,<3.12"
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
description = "Keras implementation of ViT (Vision Transformer)"
dynamic = ["version"]
homepage = "https://github.com/faustomorales/vit-keras"
license = "Apache-2.0"
name = "vit-keras"
readme = "README.md"
repository = "https://github.com/faustomorales/vit-keras"
dependencies = [
    "scipy",
    "validators"
]

[dependency-groups]
dev = [
    "black",
    "mypy",
    "pytest",
    "pylint",
    "opencv-python",
    "types-requests",
    "types-setuptools",
    "keras>=3",
    "tensorflow",
    "jupyterlab",
    "matplotlib"
]

[project.optional-dependencies]
visualization = [
    "matplotlib"
]

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:the imp module is deprecated in favour of importlib;:DeprecationWarning"
]

[tool.pylint.main]
extension-pkg-allow-list = [
    "cv2",
]

[tool.pylint.messages_control]
disable = [
    "line-too-long",
    "missing-module-docstring",
    "invalid-name",
    "attribute-defined-outside-init",
    "too-many-locals",
    "too-many-arguments",
    "too-many-branches",
    "too-many-statements",
    "no-member"
]
